--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@types/node": "^24.5.2"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.2",
+    "moment-timezone": "^0.6.0",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   }
 }
