Edit Read Me File

--- a/config/.env.development
+++ b/config/.env.development
@@ -1,7 +1,7 @@
 # Dotenv Configuration
 DOTENV_CONFIG_DEBUG=false
 
-# Application Configuration
+# Development Environment Configuration
 BASE_URL=https://automationteststore.com
 PORT=3000
 
@@ -27,6 +27,3 @@ VIEWPORT_HEIGHT=720
 SCREENSHOTS=only-on-failure
 VIDEO=retain-on-failure
 TRACE=on-first-retry
-
-# CI/CD Configuration
-NODE_ENV=development
