--- a/package.json
+++ b/package.json
@@ -3,7 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:report": "playwright show-report",
+    "test:install": "playwright install",
+    "test:install-deps": "playwright install --with-deps",
+    "lint": "eslint . --ext .js,.ts",
+    "lint:fix": "eslint . --ext .js,.ts --fix",
+    "format": "prettier --write \"**/*.{js,ts,json,md}\"",
+    "format:check": "prettier --check \"**/*.{js,ts,json,md}\"",
+    "coverage": "c8 --reporter=html --reporter=text playwright test",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix",
+    "quality:all": "npm run lint && npm run format:check && npm run coverage",
+    "ci:test": "playwright test --reporter=html",
+    "ci:install": "npm ci && playwright install --with-deps"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
